--- a/app/templates/app/balance.html
+++ b/app/templates/app/balance.html
@@ -10,6 +10,7 @@
             <a id='btn-balance-add' class="btn btn-default btn-lg" href="{% url 'app:revenue_update'%}"  role="button" name='new_payment'>
                 <img class="button-pic" src="/app/static/img/add.png" alt="New transaction"/>
             </a>
+            <a class="btn btn-default btn-lg" href="{% url 'app:orders' %}" role="button">Orders</a>
             <div class="btn-group" role="group">
                 <button type="submit" name="export" class="btn btn-default btn-lg">Export</button>
             </div>
@@ -34,7 +35,9 @@
     {% for update in revenue_updates %}
         <tr>
             {% if update.transaction != None %}
-                <td><a href="{% url 'app:detail_1' 'balance' update.transaction.id %}">{{ update.transaction.id }}</a></td>
+                <td><a href="{% url 'app:detail_1' 'balance' update.transaction.id %}">T-{{ update.transaction.id }}</a></td>
+            {% elif update.order != None %}
+                <td><a href="{% url 'app:edit_order' 'balance' update.order.id %}">P-{{ update.order_id }} </a></td>
             {% else %}
                 <td><a href="javascript:return false;">-</a></td>
             {% endif %}
@@ -49,7 +52,7 @@
             <td class="non-mobile">{{ update.transaction.first_name }} {{ update.transaction.last_name }}</td>
 
             <td>${{ update.new_total_revenue }}</td>
-            <td>{{ update.date_submitted|date:"n/j/y" }}</td>
+            <td>{{ update.date_submitted|date:"n/j" }}</td>
         </tr>
     {% endfor %}
     </table>
