--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -13,6 +13,7 @@
     <script src="{% static 'js/bootstrap.min.js' %}"
             type="text/javascript"
             charset="utf-8" async defer></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1,
                               maximum-scale=1, user-scalable=0"/>
   </head>
@@ -53,5 +54,17 @@
     {% endblock %}
     {% block detail %}
     {% endblock %}
+
+        <div id="footercontainer">
+            <div id="footer">
+                <table width="100%">
+                    <tr>
+                        <td>
+                            <p class="footer" align="center"><a href="/about">ABOUT THE APP</a> | <a href="https://github.com/rice-apps/roommate-finder">GITHUB SOURCE</a> | <a href="http://riceapps.org">RICE APPS</a> | <a href="http://www.rice.edu">RICE UNIVERSITY</a></p>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
   </body>
 </html>
