--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -3,13 +3,19 @@
 {% block content %}
 <h1>Log In to the Rice Bikes App</h1>
 
-<form id="login_form" method="post" action="/login/">
+<form class="form-horizontal" id="login_form" method="post" action="/login/">
     {% csrf_token %}
     <div class="form-group">
-    Username: <input type="text" name="username" value="" size="50">
+        <label for="username" class="col-xs-2 control-label">Username</label>
+        <div class="col-xs-10">
+            <input id="username" class="form-control" type="text" name="username" value="" size="50">
+        </div>
     </div>
     <div class="form-group">
-    Password: <input type="password" name="password" value="" size="50">
+        <label for="password" class="col-xs-2 control-label">Password</label>
+        <div class="col-xs-10">
+            <input id="password" class="form-control" type="password" name="password" value="" size="50">
+        </div>
     </div>
 
     <button type="submit" class="btn btn-default">Submit</button>
