--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -1,23 +1,15 @@
 {% extends "app/base.html" %}
 
 {% block content %}
-<h1>Log In to the Rice Bikes App</h1>
+<h1>Log In</h1>
 
 <form class="form-horizontal" id="login_form" method="post" action="/login/">
     {% csrf_token %}
-    <div class="form-group">
-        <label for="username" class="col-xs-2 control-label">Username</label>
-        <div class="col-xs-10">
-            <input id="username" class="form-control" type="text" name="username" value="" size="50">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="password" class="col-xs-2 control-label">Password</label>
-        <div class="col-xs-10">
-            <input id="password" class="form-control" type="password" name="password" value="" size="50">
-        </div>
-    </div>
-
+    <label for="username" class=" control-label">Username</label>
+    <input id="username" class="form-control" type="text" name="username" value="" size="50">
+    <label for="password" class="control-label">Password</label>
+    <input id="password" class="form-control" type="password" name="password" value="" size="50">
+    <br>
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
 
