Styled assign_parts page
Darkened the disabled category selectors.
Added the add button to client-added categories.

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -149,3 +149,7 @@ p.order-submitted-link a{
 .assign-parts-delete-button {
     margin-top: 23px;
 }
+
+.assign-parts-category-field select{
+    background-color: #000000 !important;
+}
