--- a/app/templates/app/detail_base.html
+++ b/app/templates/app/detail_base.html
@@ -60,8 +60,8 @@
         <thead>
             <td class="col-sm-3"><b>Category</b></td>
             <td class="col-sm-1"><b>Price</b></td>
-            <td class="col-sm-1"><b>Was Installed</b></td>
-            <td class="col-sm-1"><b>Description</b></td>
+            <td class="col-sm-1"><b>Installed</b></td>
+            <td class="col-sm-1"><b>Details</b></td>
         </thead>
     {% for part_category in part_categories %}
         <tr>
